Fix buildissues (yea, with workarounds for now)
